<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="ObsoleteLayoutParam">

    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_spinner_small"
            android:layout_width="@dimen/progress_bar_dimen"
            android:layout_height="@dimen/progress_bar_dimen"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/progress_text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:text="@string/loading_message"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer_error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">


        <TextView
            android:id="@+id/oops_something_went_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dimen_20_dp"
            android:text="@string/oops_something_went_wrong"
            android:textColor="@color/gery_color"
            android:textSize="20sp"
           />

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:textSize="@dimen/retry_text_size" />
    </LinearLayout>
</LinearLayout>